--- a/components/forms/DemoForm/DemoForm.module.scss
+++ b/components/forms/DemoForm/DemoForm.module.scss
@@ -37,7 +37,7 @@
   }
   &__button {
     min-width: 40%;
-    width: 186px;
+    width: 186px !important;
   }
   &__agreement {
     display: flex;
