--- a/components/Blog/ArticleItem.module.scss
+++ b/components/Blog/ArticleItem.module.scss
@@ -31,16 +31,34 @@
 }
 
 .article {
-  &__wrapper {
-    border-style: solid;
-    border-width: 5px;
-    border-color: lightblue;
+  &__item {
+    margin-bottom: 16px;
+    width: calc(50% - 10px);
+    padding: 40px;
+    background: #ffffff;
+    border-radius: 20px;
+    box-sizing: border-box;
+    text-decoration: none;
+    cursor: pointer;
+    &:nth-child(2n + 2) {
+      margin-left: 20px;
+    }
+    @media screen and (max-width: 1024px) {
+      width: 100%;
+      margin-left: auto;
+    }
   }
   &__header {
     font-weight: bold;
     font-size: 24px;
     line-height: 29px;
     color: #3a3a3a;
+  }
+  &__body {
+    margin-top: 20px;
+    font-size: 18px;
+    line-height: 160%;
+    color: #000000;
   }
   &__img {
     width: 100%;
